Games pagination ok, reviews pagination pending

--- a/src/main/webapp/css/component/main.css
+++ b/src/main/webapp/css/component/main.css
@@ -2,3 +2,5 @@
 @import url("search-bar.css");
 @import url("link.css");
 @import url("images.css");
+@import url("pagination.css");
+@import url("sort.css");
